packages/svelte/tests/validator/samples/class-state-constructor-7/input.svelte.js
const count = 'count';

export class Counter {
	constructor() {
		this[count] = $state(0);
	}
}
