packages/svelte/tests/compiler-errors/samples/runes-export-named-state/main.js
export const x = $state(0);
